ECA-8277: remove direct reference to the java ext dir, that does not exist in java 11, still use the local ext on the classpath for user added jars (jdbc driver for example)
git-svn-id: https://svn.cesecore.eu/svn/ejbca-restricted/trunk/ejbca@33130 37aeb1de-b14b-0410-9a0e-82b28170d228