@@ -15,25 +15,6 @@ else
 fi
 
 
-if [ -z ${JAVA_EXT} ] ; then
-	#assume that the java executable (not symlink) is in the $JAVA_HOME/jre/bin directory.
-	jreHome=$(dirname $(dirname $(readlink -f $(which ${javaCmd}))))
-
-	if [ ! -d ${jreHome}/lib/ext ] ; then
-		#wrong in previous assumption. New assumption $JAVA_HOME/bin
-		jreHome=${jreHome}/jre
-	fi
-
-	if [ ! -d ${jreHome}/lib/ext ] ; then
-		echo "Can not find the ext directory"
-		exit
-	fi
-
-	JAVA_EXT="${jreHome}/lib/ext:/usr/java/packages/lib/ext:${TOOLBOX_HOME}/ext"
-fi
-
-JAVA_OPT="${JAVA_OPT} -Djava.ext.dirs=${JAVA_EXT}"
-
 # Finally run java
 #set -x
-${javaCmd} ${JAVA_OPT} -jar $TOOLBOX_HOME/clientToolBox.jar "${@}"
+${javaCmd} ${JAVA_OPT} -cp "$TOOLBOX_HOME/clientToolBox.jar:${TOOLBOX_HOME}/ext/*" org.ejbca.ui.cli.ClientToolBox "${@}"
